--- a/index.html
+++ b/index.html
@@ -2,23 +2,22 @@
 <html lang="en-US"
       lang="ar-TN">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="images/ProgramBooks/ProgramCodeBook.png" type="image/x-icon">
-    <title>Programming Books</title>
+    <meta property="og:title" content="Discord Emoji Downloader">
+    <meta property="og:description" content="LEARNING HTML CSS JAVASCRIPT MORE ...">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://ala-gargouri.github.io/program-books/index.html">
+    <link rel="stylesheet" href="https://ala-gargouri.github.io/program-books/style.css">
 </head>
 <body>
     <nav>
         <ul class="menu_nav">
-            <li class="list_nav"><a href="Learning/HTML.html">HTML</a></li>
-            <li class="list_nav"><a href="Learning/CSS.html">CSS</a></li>
-            <li class="list_nav"><a href="Learning/JAVASCRIPT.html">Javascript</a></li>
-            <li class="list_nav"><a href="Learning/BOOTSTRAP.html">Bootstrap</a></li>
-            <li class="list_nav"><a href="Learning/ANGULAR.html">Angular</a></li>
-            <li class="list_nav"><a href="Learning/REACT.html">React</a></li>
-            <li class="list_nav"><a href="Learning/VUE.html">Vue</a></li>
+            <li class="list_nav"><a href="https://ala-gargouri.github.io/program-books/Learning/HTML.html">HTML</a></li>
+            <li class="list_nav"><a href="https://ala-gargouri.github.io/program-books/Learning/CSS.html">CSS</a></li>
+            <li class="list_nav"><a href="https://ala-gargouri.github.io/program-books/Learning/JAVASCRIPT.html">Javascript</a></li>
+            <li class="list_nav"><a href="https://ala-gargouri.github.io/program-books/Learning/BOOTSTRAP.html">Bootstrap</a></li>
+            <li class="list_nav"><a href="https://ala-gargouri.github.io/program-books/Learning/ANGULAR.html">Angular</a></li>
+            <li class="list_nav"><a href="https://ala-gargouri.github.io/program-books/Learning/REACT.html">React</a></li>
+            <li class="list_nav"><a href="https://ala-gargouri.github.io/program-books/Learning/VUE.html">Vue</a></li>
         </ul>
     </nav>
     <section style="margin-top: 10px;">
