program books level 1

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-US"
       lang="ar-TN">
 <head>
-    <meta property="og:title" content="Discord Emoji Downloader">
+    <meta property="og:title" content="Easy To Learn">
     <meta property="og:description" content="LEARNING HTML CSS JAVASCRIPT MORE ...">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://ala-gargouri.github.io/program-books/index.html">
