--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://ala-gargouri.github.io/program-books/">
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut png" href="/images/ProgramBooks/ProgramCodeBook.png" type="image/x-png">
+    <link rel="shortcut icon" href="images/ProgramBooks/ProgramCodeBook.icon" type="image/x-icon">
     <title>Programming Books</title>
 </head>
 <body>
