--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html lang="en-US"
       lang="ar-TN">
 <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:title" content="Easy To Learn">
     <meta property="og:description" content="LEARNING HTML CSS JAVASCRIPT MORE ...">
     <meta property="og:type" content="website">
@@ -25,7 +28,7 @@
     <section style="margin-top: 10px;">
         <article>you want learning about front end and back-end so first if you want make yourself developer from this world just learn : HTML , CSS , JAVASCRIPT</article>
         <article>step by step it's easy to learn all front end then go back-end</article>
-        <img src="images/HTML/téléchargement.png" alt="HTML-CSS-JAVASCRIPT" width="1000" height="400" style="margin-left: 150px; margin-top: 30px;">
+        <img src="images/Learning/FrontEnd(HTML, CSS, JAVASCRIPT).png" alt="HTML-CSS-JAVASCRIPT" width="1000" height="400" style="margin-left: 150px; margin-top: 30px;">
     </section>
     <script src="script.js"></script>
 </body>
