use Learning from lien

--- a/Learning/VUE.html
+++ b/Learning/VUE.html
@@ -7,7 +7,7 @@
     <meta property="og:title" content="Easy To Learn">
     <meta property="og:description" content="LEARNING HTML CSS JAVASCRIPT MORE ...">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://ala-gargouri.github.io/program-books/">
+    <meta property="og:url" content="https://ala-gargouri.github.io/program-books/Learning/">
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="images/ProgramBooks/ProgramCodeBook.icon" type="image/x-icon">
     <title>LEARN VUE</title>
