--- a/Learning/HTML.html
+++ b/Learning/HTML.html
@@ -7,7 +7,7 @@
     <meta property="og:title" content="Easy To Learn">
     <meta property="og:description" content="LEARNING HTML CSS JAVASCRIPT MORE ...">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://ala-gargouri.github.io/program-books/">
+    <meta property="og:url" content="https://ala-gargouri.github.io/program-books/Learning/">
     <link rel="stylesheet" href="../style.css">
     <link rel="shortcut icon" href="../images/Learning/html5-logo-icon-3d-hd-png-11664330368ddgc1rombr.png" type="image/x-icon">
     <title>LEARN</title>
